--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saddat's Playground</title>
+    <script>
+      // Ensure dark mode is applied immediately to prevent flash
+      document.documentElement.classList.add('dark');
+    </script>
   </head>
   <body>
     <div id="root"></div>
